<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <Button
        android:id="@+id/bt_custom_view"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="42dp"
        android:background="@drawable/bg_ffcc45_r12"
        android:text="@string/custom_view"
        android:textAllCaps="false"
        android:textColor="@color/c_242323"
        android:textSize="14sp" />


    <Button
        android:id="@+id/bt_anim"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="42dp"
        android:background="@drawable/bg_ffcc45_r12"
        android:text="@string/anim"
        android:textAllCaps="false"
        android:textColor="@color/c_242323"
        android:textSize="14sp" />


    <Button
        android:id="@+id/bt_touch"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="42dp"
        android:background="@drawable/bg_ffcc45_r12"
        android:text="@string/touch"
        android:textAllCaps="false"
        android:textColor="@color/c_242323"
        android:textSize="14sp" />

    <Button
        android:id="@+id/bt_thread"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="42dp"
        android:background="@drawable/bg_ffcc45_r12"
        android:text="@string/thread"
        android:textAllCaps="false"
        android:textColor="@color/c_242323"
        android:textSize="14sp" />

</LinearLayout>