<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <Button
        android:id="@+id/bt_base_anim"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="42dp"
        android:background="@drawable/bg_ffcc45_r12"
        android:text="@string/base_anim_use"
        android:textAllCaps="false"
        android:textColor="@color/c_242323"
        android:textSize="14sp" />


    <Button
        android:id="@+id/bt_anim_set"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="42dp"
        android:background="@drawable/bg_ffcc45_r12"
        android:text="@string/anim_set"
        android:textAllCaps="false"
        android:textColor="@color/c_242323"
        android:textSize="14sp" />


    <Button
        android:id="@+id/bt_key_frame"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="42dp"
        android:background="@drawable/bg_ffcc45_r12"
        android:text="@string/key_frame"
        android:textAllCaps="false"
        android:textColor="@color/c_242323"
        android:textSize="14sp" />

    <Button
        android:id="@+id/bt_interpolator"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="42dp"
        android:background="@drawable/bg_ffcc45_r12"
        android:text="@string/interpolator"
        android:textAllCaps="false"
        android:textColor="@color/c_242323"
        android:textSize="14sp" />
</LinearLayout>