<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <Button
            android:id="@+id/bt_touch"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginStart="42dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="42dp"
            android:background="@drawable/bg_ffcc45_r12"
            android:text="@string/touch"
            android:textAllCaps="false"
            android:textColor="@color/c_242323"
            android:textSize="14sp" />

        <Button
            android:id="@+id/bt_scalable_view"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginStart="42dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="42dp"
            android:background="@drawable/bg_ffcc45_r12"
            android:text="@string/scalable_image_view"
            android:textAllCaps="false"
            android:textColor="@color/c_242323"
            android:textSize="14sp" />

        <Button
            android:id="@+id/bt_multi_touch"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginStart="42dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="42dp"
            android:background="@drawable/bg_ffcc45_r12"
            android:text="@string/multi_touch"
            android:textAllCaps="false"
            android:textColor="@color/c_242323"
            android:textSize="14sp" />


        <Button
            android:id="@+id/bt_view_pager"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginStart="42dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="42dp"
            android:background="@drawable/bg_ffcc45_r12"
            android:text="@string/view_pager_easy"
            android:textAllCaps="false"
            android:textColor="@color/c_242323"
            android:textSize="14sp" />


        <Button
            android:id="@+id/bt_drag"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginStart="42dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="42dp"
            android:background="@drawable/bg_ffcc45_r12"
            android:text="@string/drag"
            android:textAllCaps="false"
            android:textColor="@color/c_242323"
            android:textSize="14sp" />
    </LinearLayout>
</ScrollView>