<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/bt_anim_difference"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginStart="42dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="42dp"
            android:background="@drawable/bg_ffcc45_r12"
            android:text="@string/anim_difference"
            android:textAllCaps="false"
            android:textColor="@color/c_242323"
            android:textSize="14sp" />


        <Button
            android:id="@+id/bt_motion_layout_1"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginStart="42dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="42dp"
            android:background="@drawable/bg_ffcc45_r12"
            android:text="@string/motion_layout_use_1"
            android:textAllCaps="false"
            android:textColor="@color/c_242323"
            android:textSize="14sp" />

        <Button
            android:id="@+id/bt_motion_layout_2"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginStart="42dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="42dp"
            android:background="@drawable/bg_ffcc45_r12"
            android:text="@string/motion_layout_use_2"
            android:textAllCaps="false"
            android:textColor="@color/c_242323"
            android:textSize="14sp" />

        <Button
            android:id="@+id/bt_motion_layout_3"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginStart="42dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="42dp"
            android:background="@drawable/bg_ffcc45_r12"
            android:text="@string/motion_layout_use_3"
            android:textAllCaps="false"
            android:textColor="@color/c_242323"
            android:textSize="14sp" />
        <Button
            android:id="@+id/bt_motion_layout_4"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginStart="42dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="42dp"
            android:background="@drawable/bg_ffcc45_r12"
            android:text="@string/motion_layout_use_4"
            android:textAllCaps="false"
            android:textColor="@color/c_242323"
            android:textSize="14sp" />

    </LinearLayout>
</ScrollView>